--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <img src="LJY.jpg" alt="Jiayi Li" class="profile-img" />
+      <!-- <img src="LJY.jpg" alt="Jiayi Li" class="profile-img" /> -->
       <div class="header-content">
         <h1>Jiayi Li</h1>
         <div class="contact-info">
